LVGL/build/log/idf_py_stderr_output_203008
/home/garfield/github/esp32-idf-device/LVGL/main/User_LVGL.c: In function 'update_label_cb':
/home/garfield/github/esp32-idf-device/LVGL/main/User_LVGL.c:103:39: error: '%d' directive output may be truncated writing between 1 and 11 bytes into a region of size 8 [-Werror=format-truncation=]
  103 |     snprintf(buf, sizeof(buf), "数字: %d", number);
      |                                       ^~
/home/garfield/github/esp32-idf-device/LVGL/main/User_LVGL.c:103:32: note: directive argument in the range [-2147483647, 2147483647]
  103 |     snprintf(buf, sizeof(buf), "数字: %d", number);
      |                                ^~~~~~~~~~
/home/garfield/github/esp32-idf-device/LVGL/main/User_LVGL.c:103:5: note: 'snprintf' output between 10 and 20 bytes into a destination of size 16
  103 |     snprintf(buf, sizeof(buf), "数字: %d", number);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:104: esp-idf/main/CMakeFiles/__idf_main.dir/User_LVGL.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:5854: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
